[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kongenlabs"
version = "1.1.0"
description = "Kongen Labs SCI Pattern Intelligence SDK -- cross-domain pattern transfer and LLM reasoning regime detection"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = [
    "pattern-intelligence",
    "cross-domain-transfer",
    "llm",
    "reasoning-regimes",
    "morphogenetic",
    "reaction-diffusion",
    "sci",
    "uaf",
]
authors = [
    { name = "Kongen Labs", email = "hello@kongenlabs.life" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://kongenlabs.life"
Documentation = "https://kongenlabs.life/docs"
Repository = "https://github.com/kongen-labs/kongen-python"
Issues = "https://github.com/kongen-labs/kongen-python/issues"
Changelog = "https://github.com/kongen-labs/kongen-python/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["kongen"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
